Ajout des classes PhoenixMenu, Option, MenuLauncher, et BackgroundDisplay_etienne ( à revoir ) par Etienne (mais en fait par Florian ;) )

--- a/project/.gitignore
+++ b/project/.gitignore
@@ -11,3 +11,8 @@
 /tile-a0.png
 /playership_1.png
 /playership_0.png
+/enemy_medium0.png
+/projectile_basic0.png
+/projectile_basic1.png
+/projectile_basic2.png
+/projectile_basic3.png
