Tentative de fonctionnement du système Client/Serveur Mode solo fonctionnel non intégré (à faire !) Mode Multi en cours

--- a/project/.gitignore
+++ b/project/.gitignore
@@ -17,3 +17,8 @@
 /projectile_basic2.png
 /projectile_basic3.png
 /enemy_medium0_old.png
+/enemy1.png
+/enemy2.png
+/enemy3.png
+/projectile_basic1_old.png
+/ship0.png
